test/classes/initializers/phase2/modifyParentParam.good
modifyParentParam.chpl:11: In initializer:
modifyParentParam.chpl:14: error: cannot update a param field, "x", from parent type in phase 2
